# SimpleControl

./: CMakeLists.txt  README.md  buildMyDemos.sh  createNewDemo.sh  uploadMyDemos.sh
DataCSV/: State.csv
simulator/: CMakeLists.txt
simulator/resources/core2-64/: simulator_x4.sh  simulator_x8.sh
simulator/src/: main.cpp
uav/: CMakeLists.txt
uav/resources/armv5te/: CircleFollower_minidrones.sh
uav/resources/armv7a-neon/: CircleFollower_ardrone2.sh  CircleFollower_bebop.sh  CircleFollower_hdsx8.sh
uav/resources/core2-64/: x4.sh  x4_intelaero.sh  x8.sh
uav/src/: Drone.cpp  Drone.h  DroneBase.cpp  DroneBase.h  Flags.h  MyLaw.cpp  MyLaw.h  SimpleControl.cpp  SimpleControl.h  main.cpp
uav/src/Control/: CMakeLists.txt  Drone.cpp  Drone.h  DroneBase.cpp  DroneBase.h  Flags.h  Law.cpp  Law.h  MyLaw.cpp  MyLaw.h  SoftTrajectoryGenerator.cpp  SoftTrajectoryGenerator.h  Trayectory.cpp  Trayectory.h
uav/src/Observer/: CMakeLists.txt  ObserverBase.cpp  ObserverBase.h  StateSpace.cpp  StateSpace.h
uav/src/Observer/KFC/: CMakeLists.txt  KFC.cpp  KFC.h
uav/src/Observer/Luenberger/: CMakeLists.txt  Luenberger.cpp  Luenberger.h
uav/src/Observer/SlidingMode/: CMakeLists.txt  SlidingMode.cpp  SlidingMode.h
uav/src/Observer/SuperTwist/: CMakeLists.txt  SuperTwist.cpp  SuperTwist.h
uav/src/Observer/UDE/: CMakeLists.txt  UDE.cpp  UDE.h
